fix image render

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <div class="container center">
     <div id="homeDiv" class="columns content">
         <div class="column col-5">
-            <img src="../img/profile.jpg" alt="profile" width="350" height="480">
+            <img src="./img/profile.jpg" alt="profile" width="350" height="480">
         </div>
         <div class="column col-7">
             <div class="container">
