--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </section>
     <section class="navbar-section">
         <div class="input-group input-inline">
-            <div id="homeNav">
+            <div class="homeNav">
                 <a href="#" class="btn btn-link"><div class="link">Home</div></a>
             </div>
-            <div id="resumeNav">
+            <div class="resumeNav">
                 <a href="#" class="btn btn-link"><div class="link">Resume</div></a>
             </div>
-            <div id="skillsNav">
+            <div class="skillsNav">
                 <a href="#" class="btn btn-link"><div class="link">Skills</div></a>
             </div>
             <!-- <div id="projectNav">
@@ -50,9 +50,9 @@
             </div>
             <div class="container">
                 <div class="columns all-margin">
-                    <div class="column col-4 circle1 all-margin">My Resume</div>
-                    <div class="column col-4 circle2 all-margin">My Work</div>
-                    <div class="column col-4 circle3 all-margin">My Skills</div>
+                    <div class="column col-4 circle1 all-margin resumeNav">My Resume</div>
+                    <div class="column col-4 circle2 all-margin resumeNav">My Work</div>
+                    <div class="column col-4 circle3 all-margin skillsNav">My Skills</div>
                 </div>
             </div>
             <div class="container">
